<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MelbournePublicTransport</string>
    <string name="title_activity_favorite_stops">FavoriteStopsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_settings">Clear settings</string>
    <string name="action_train_stops_nearby">Train stops nearby</string>
    <string name="action_stops_nearby">Stops nearby</string>
    <string name="action_disruptions">Disruptions</string>
    <string name="action_reload_database">Reload data</string>

    <string name="fixed_location_could_not_select">Could not select \'fixed\' location - try again.</string>
    <string name="widget_stop_could_not_select">Could not select \'widget\' stop - try again.</string>
    <string name="no_favorite_stops_selected">No favorite stops selected.</string>
    <string name="no_favorite_stops_selected_in_settings">No \'favorite\' stops selected. Exit Settings,
        add some \'favorite\' stops and go to Settings again. Select \'widget\' stop.
    </string>
    <string name="database_is_empty">Database is empty (select \'menu/reload\' to load it)</string>
    <string name="no_stops_to_add">There are no stops to add</string>
    <string name="no_departures_detail">No departure details</string>
    <string name="express_train">Express</string>
    <string name="all_stops_train">All stops</string>
    <string name="database_load_status">database_load_status</string>

    <!-- error message: no network access -->
    <string name="no_network_connection">No network connection</string>
    <!-- error message: can not access PTV web site -->
    <string name="can_not_access_ptv_site">
        Cannot access PTV site: <xliff:g id="dev_info">%1$s</xliff:g>
    </string>≈

    <string name="touch_up_button_first">Touch Up button first</string>≈

    <!-- Key name for storing fixed location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_fixed_location" translatable="false">fixed_location</string>

    <!-- Title for the fixed location preference [CHAR LIMIT=30]  -->
    <string name="pref_title_fixed_location">Fixed location</string>
    <string name="pref_google_services_not_available_fixed_location">Google Services not available</string>

    <!-- Default text text for fixed location preference [CHAR LIMIT=NONE] -->
    <string name="pref_default_fixed_location">Not assigned</string>
    <string name="pref_default_fixed_location_address">233 Flinders St, Melbourne 3000, Australia</string>

    <!-- Key name for storing widget stop name in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_widget_stop_name" translatable="false">widget_stop_name</string>

    <!-- Key name for storing widget stop id in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_widget_stop_id">widget_stop_id</string>
    <string name="pref_default_widget_stop_id">1071</string>
    <string name="pref_default_widget_stop_name">Flinders Street Station</string>

    <!-- Key name for storing AppBar vertical offset in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_appbar_vertical_offset" translatable="false">appbar_vertical_offset</string>
    <string name="pref_default_appbar_vertical_offset">9999</string>

    <!-- Key name for storing widget stop id in SharedPreferences [CHAR LIMIT=NONE] -->
    <!--<string name="pref_key_widget_stop_set_up_instructions">widget_stop_instructions</string>-->

    <!-- Key name for storing widget stop id in SharedPreferences [CHAR LIMIT=NONE] -->
    <!--<string name="pref_default_widget_stop_set_up_instructions">No instructions available.</string>-->

    <!-- Key name for storing widget stop id in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_value_widget_stop_set_up_instructions">The widget stop name is not assigned.
        \n\nStart the app > open the \'Settings\' menu > touch the icon in the \'Widget stop name\' row > select stop
    </string>

    <!-- Title for the location preference [CHAR LIMIT=30]  -->
    <string name="pref_title_widget_stop_name">Widget stop name</string>

    <!-- Key name for storing use fixed/device location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_use_device_location">use_device_fixed_location</string>
    <string name="pref_title_use_device_fixed_location">Use device location</string>
    <string name="pref_err_use_device_location">\'fixed location\' not assigned</string>
    <string name="pref_summary_use_device_location">Using device location to show \'stops nearby\'.
    </string>
    <string name="pref_summary_use_fixed_location">Using \'fixed\' location to show \'stops nearby\'.
    </string>

    <!-- Key name for storing location status in SharedPreferences -->
    <string name="pref_location_status_key" translatable="false">loc-status</string>

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_key_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_key_location_longitude" translatable="false">loc-longitude</string>

    <!-- Strings used when displaying the state of the Location in settings
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
-->
    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="un">UN</string>
    <string name="united_nations">United Nations</string>

    <string name="title_favorite_stops">Favorite stops</string>
    <string name="title_widget_stops">Widget stops</string>
    <string name="title_settings">Settings</string>
    <string name="title_data_load">Loading MTV data</string>
    <string name="title_stops">Stops</string>
    <string name="title_train_stops_nearby">Train stops nearby</string>
    <string name="title_stops_nearby">Stops nearby</string>
    <string name="title_next_departures">Next departures</string>
    <string name="title_disruptions">Disruptions</string>
    <string name="title_stop_on_map">Stop location</string>
    <string name="title_widget_departures">Departures</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to content descriptions -->
    <string name="pref_desc_disruptions_title">
        Visit us at <xliff:g id="disruptions_title">%1$s</xliff:g>
    </string>
    <string name="pref_desc_disruptions_more_info">Disruptions details</string>
    <string name="pref_desc_main_add_favorite_stop">Add favorite stop</string>
    <string name="pref_desc_main_refresh_next_departures">Refresh next departures</string>

    <!-- Content description for the get 'fixed' location button in the location preference -->
    <string name="pref_desc_fixed_location">Touch to select fixed location</string>

    <!-- Content description for the get current widhet stop button in the location preference -->
    <string name="pref_desc_current_widget_stop">Show this stop on widget</string>


    <!-- Strings related to content descriptions shared betweeen different layouts -->
    <string name="content_desc_bus_transport_type">Bus</string>
    <string name="content_desc_tram_transport_type">Tram</string>
    <string name="content_desc_train_transport_type">Train</string>
    <string name="content_desc_show_departures">Show departures</string>
    <string name="content_desc_show_map">Show stop on map</string>
    <string name="content_desc_remove_from_favorites">Remove stop from favorites</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>