<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fragments.FavoriteStopsFragment">

    <item
        android:id="@+id/action_train_stops_nearby"
        android:orderInCategory="10"
        android:title="@string/action_train_stops_nearby"
        android:icon="@drawable/ic_stock_near_me_white_48dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_stops_nearby"
        android:orderInCategory="10"
        android:title="@string/action_stops_nearby"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_disruptions"
        android:orderInCategory="20"
        android:title="@string/action_disruptions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reload_database"
        android:orderInCategory="20"
        android:title="@string/action_reload_database"
        app:showAsAction="never"/>
</menu>