<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.FavoriteStopsActivity">

    <item
        android:id="@+id/action_stops_nearby"
        android:orderInCategory="10"
        android:title="@string/action_stops_nearby"
        android:icon="@drawable/ic_near_me_orange_48dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_disruptions"
        android:orderInCategory="20"
        android:title="@string/action_disruptions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_station_on_map"
        android:orderInCategory="30"
        android:title="@string/action_station_on_map"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>