<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:background="@drawable/today_touch_selector" >

        <ImageView
            android:id="@+id/transportImageId"
            android:scaleType="center"
            android:layout_width="@dimen/touchable_size"
            android:layout_height="@dimen/touchable_size"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:src="@drawable/ic_stock_train_blue_500_48dp"
            android:contentDescription="@string/content_desc_train_transport_type" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationNameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Location name"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/departuresImageId"
            android:layout_width="@dimen/touchable_size"
            android:layout_height="@dimen/touchable_size"
            android:adjustViewBounds="true"
            android:background="@drawable/today_touch_selector"
            android:src="@drawable/ic_stock_forward_10_green_500_48dp"
            android:contentDescription="@string/content_desc_show_departures" />

        <ImageView
            android:id="@+id/mapImageId"
            android:layout_width="@dimen/touchable_size"
            android:layout_height="@dimen/touchable_size"
            android:background="@drawable/today_touch_selector"
            android:src="@drawable/ic_stock_place_green_500_48dp"
            android:contentDescription="@string/content_desc_show_map" />

        <ImageView
            android:id="@+id/garbageImageId"
            android:layout_width="@dimen/touchable_size"
            android:layout_height="@dimen/touchable_size"
            android:background="@drawable/today_touch_selector"
            android:src="@drawable/ic_stock_delete_green_500_48dp"
            android:contentDescription="@string/content_desc_remove_from_favorites" />

    </LinearLayout>
</FrameLayout>