<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/transportImageId"
            android:scaleType="center"
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:background="@color/view_not_in_focus"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:src="@drawable/ic_stock_train_blue_500_48dp"
            android:contentDescription="@string/content_desc_train_transport_type" />

        <TextView
            android:id="@+id/locationNameId"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="Location name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/black"
            android:background="@color/view_not_in_focus" />

        <ImageView
            android:id="@+id/departuresImageId"
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:background="@color/view_not_in_focus"
            android:src="@drawable/ic_stock_forward_10_green_500_48dp"
            android:contentDescription="@string/content_desc_show_departures" />

        <ImageView
            android:id="@+id/mapImageId"
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:background="@color/view_not_in_focus"
            android:src="@drawable/ic_stock_place_green_500_48dp"
            android:contentDescription="@string/content_desc_show_map" />

    </LinearLayout>
</FrameLayout>